color Contrast corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*Index Page */
 
 body {
-    background-color: #00203FFF;
+    background-color: #00203f;
     font-size: 15px;
 }
 
@@ -46,7 +46,7 @@ body {
     font-family: sans-serif;
     font-size: 60px;
     font-weight: bold;
-    color: #e41414af;
+    color: #ffffff;
     text-align: center;
 }
 
@@ -239,9 +239,9 @@ body {
     justify-content: space-evenly;
     margin-top: 5rem;
     position: fixed;
-    left: 0;
     bottom: 0;
     width: 100%;
+    height: 40px;
 }
 
 
